@@ -3,6 +3,7 @@ amaroK ChangeLog
 (c) 2002-2004 the amaroK authors.
 
 
+  FIX: Track length was always 0 for certain filetypes (e.g. mod, wav) (BR 82673).
   FIX: Gst engine refusing to add certain filetypes to the playlist, when
        the engine was idle (BR 82713).
   FIX: Rare playlist redraw bug, which resulted in messed up items.
